--- a/cot_all_symbols_to_sql.ipynb
+++ b/cot_all_symbols_to_sql.ipynb
@@ -55,7 +55,12 @@
   {
    "cell_type": "markdown",
    "id": "ad3c971e-0eec-4e72-9d6a-9eb046d79047",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "Define list of years I want to download"
    ]
@@ -77,7 +82,7 @@
    "id": "10cd3390-a285-4603-8a53-eef5fd4abd34",
    "metadata": {},
    "source": [
-    "Use pyodbc to innitialize the SQL database connection"
+    "Use pyodbc to initialize the SQL database connection"
    ]
   },
   {
@@ -126,7 +131,7 @@
    ],
    "source": [
     "for year in years_to_download:\n",
-    "    # Construct URL for the ZIP file (I had to search inside the website to know the file repository)\n",
+    "    # Construct URL for the ZIP file (I had to search inside the website for the file repository)\n",
     "    zip_url = f\"{base_url}/files/dea/history/fut_fin_txt_{year}.zip\"\n",
     "\n",
     "    # Send an HTTP GET request to download the ZIP file\n",
