--- a/cot_all_symbols_noncommercial_to_sql.ipynb
+++ b/cot_all_symbols_noncommercial_to_sql.ipynb
@@ -89,10 +89,10 @@
    },
    "outputs": [],
    "source": [
-    "server = 'DESKTOP-HK9LHN8'\n",
-    "database = 'projetos'\n",
-    "username = 'sa'\n",
-    "password = '1620meguie'"
+    "server = 'server name'\n",
+    "database = 'database name'\n",
+    "username = 'username'\n",
+    "password = 'password'"
    ]
   },
   {
